Vérifications des vérifications de la refacto